start-microfrontends/k8s/qa/stps-microfront/stps-microfront-deployment-qa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modulefederation-stps-microfront-deployment-qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modulefederation-stps-microfront-qa
  template:
    metadata:
      labels:
        app: modulefederation-stps-microfront-qa
    spec:
      containers:
      - name: front-vucem30-container-qa
        image: ghcr.io/vucem30/dockerized-modulefederation-stps-microfront:1.2.69
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
      imagePullSecrets:
      - name: vucem30registrykey
