start-microfrontends/k8s/qa/stps-microfront/stps-microfront-service-qa.yaml
# Expose the deployment using a Service
apiVersion: v1
kind: Service
metadata:
  name: modulefederation-stps-microfront-service-qa
spec:
  selector:
    app: modulefederation-stps-microfront-qa
  ports:
    - protocol: TCP
      port: 4223
      targetPort: 80
  type: NodePort
